--- a/.distignore
+++ b/.distignore
@@ -3,24 +3,26 @@
 .gitignore
 .phpcs.cache
 .phpcs.xml.dist
+.phpunit.cache
 .phpunit.result.cache
 .wp-env.json
 /.git
 /.github
 /.idea
-/.phpunit.cache
-/.phpunit.cache
 /.vscode
 /.wordpress-org
 /bin
 /build
 /docs
 /multisite-improvements
+/node_modules
 /tests
 CODEOWNERS
 README.md
 composer.lock
 multisite-improvements.zip
+package-lock.json
+package.json
 phpstan.neon.dist
 phpunit-integration-tests.xml.dist
 phpunit.xml.dist
