--- a/composer.json
+++ b/composer.json
@@ -40,9 +40,10 @@
         "phpunit/phpunit": "^9.6"
     },
     "scripts": {
-        "test:unit:php": "vendor/bin/phpunit",
-        "test:integration:php": "wp-env run tests-cli --env-cwd=wp-content/plugins/multisite-improvements ./vendor/bin/phpunit -c phpunit-integration-tests.xml.dist",
-        "tests": ["@test:unit:php", "@test:integration:php"],
+        "tests:unit:php": "vendor/bin/phpunit",
+        "tests:unit": ["@tests:unit:php"],
+        "tests:integration:php": "npx wp-env run tests-cli --env-cwd=wp-content/plugins/multisite-improvements ./vendor/bin/phpunit -c phpunit-integration-tests.xml.dist",
+        "tests:integration": ["@tests:integration:php"],
         "lint:php": "vendor/bin/phpcs .",
         "lint": ["@lint:php"],
         "fix:php": "vendor/bin/phpcbf .",
