--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -6,15 +6,16 @@ jobs:
     steps:
       - name: Checkout project
         uses: actions/checkout@v4
-      - name: Composer dependencies
-        run: composer install
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: 'npm'
       - name: Install Node dependencies
         run: npm ci
       - name: Start WordPress Environment
         run: npm run wp-env start
+      - name: Composer dependencies
+        run: composer install
       - name: Run Testsuite
         run: composer run-script tests:integration
