--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -1,11 +1,13 @@
 name: Integration Tests
 on: [push]
 jobs:
-  unit-tests:
+  integration-tests:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout project
         uses: actions/checkout@v4
+      - name: Composer dependencies
+        run: composer install
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
@@ -15,7 +17,5 @@ jobs:
         run: npm ci
       - name: Start WordPress Environment
         run: npm run wp-env start
-      - name: Composer dependencies
-        run: composer install
       - name: Run Testsuite
         run: composer run-script tests:integration
