--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -1,7 +1,8 @@
 name: Integration Tests
 on: [push]
 jobs:
-  unit-tests:
+
+integration-tests:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout project
@@ -12,9 +13,26 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: 'npm'
       - name: Install Node dependencies
         run: npm ci
       - name: Start WordPress Environment
         run: npm run wp-env start
+      - name: Wait for WordPress to be ready
+        run: |
+          for i in {1..30}; do
+            curl -sSf http://localhost:8888/wp-login.php > /dev/null && break
+            echo "Waiting for WordPress environment to be ready..."
+            sleep 5
+          done
+      - name: Install WordPress Multisite (for tests-cli)
+        run: |
+          npx wp-env run tests-cli wp core multisite-install \
+            --url=localhost:8889 \
+            --title="Test Network" \
+            --admin_user=admin \
+            --admin_password=password \
+            --admin_email=admin@example.com \
+            --skip-email
       - name: Run Testsuite
         run: composer run-script tests:integration
