--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,10 @@
         "tests:unit": ["@tests:unit:php"],
         "tests:integration:php": "npm run-script wp-env run tests-cli -- --env-cwd=wp-content/plugins/multisite-improvements ./vendor/bin/phpunit -c phpunit-integration-tests.xml.dist",
         "tests:integration": ["@tests:integration:php"],
+        "tests": [
+            "@tests:unit",
+            "@tests:integration"
+        ],
         "lint:php": "vendor/bin/phpcs .",
         "lint": ["@lint:php"],
         "fix:php": "vendor/bin/phpcbf .",
