--- a/.distignore
+++ b/.distignore
@@ -2,8 +2,7 @@
 .gitattributes
 .gitignore
 .phpcs.cache
-.phpcs.xml.dist
-.phpunit.cache
+/.phpunit.cache
 .phpunit.result.cache
 .wp-env.json
 /.git
@@ -20,9 +19,9 @@
 CODEOWNERS
 README.md
 composer.lock
+integration.xml.dist
 multisite-improvements.zip
 package-lock.json
 package.json
 phpstan.neon.dist
-phpunit-integration-tests.xml.dist
 phpunit.xml.dist
