--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,26 +1,28 @@
 <?xml version="1.0"?>
 <phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.6/phpunit.xsd"
+         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.5/phpunit.xsd"
          backupGlobals="true"
          colors="true"
          testdox="false"
          bootstrap="tests/php/unit/bootstrap.php"
+         displayDetailsOnIncompleteTests="true"
+         displayDetailsOnSkippedTests="true"
+         displayDetailsOnTestsThatTriggerDeprecations="true"
+         displayDetailsOnTestsThatTriggerErrors="true"
+         displayDetailsOnTestsThatTriggerNotices="true"
+         displayDetailsOnTestsThatTriggerWarnings="true"
+         displayDetailsOnPhpunitDeprecations="true"
+         cacheDirectory=".phpunit.cache"
 >
-  <php>
-    <ini name="error_reporting" value="32767" />
-    <ini name="display_errors" value="1" />
-    <ini name="display_startup_errors" value="1" />
-  </php>
-
   <testsuites>
     <testsuite name="Unit tests">
       <directory prefix="Test" suffix=".php">tests/php/unit</directory>
     </testsuite>
   </testsuites>
 
-  <coverage>
+  <source>
     <include>
       <directory suffix=".php">src/</directory>
     </include>
-  </coverage>
+  </source>
 </phpunit>
