--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,18 +1,9 @@
 <?xml version="1.0"?>
 <phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.5/phpunit.xsd"
+         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/11.5/phpunit.xsd"
          backupGlobals="true"
          colors="true"
-         testdox="false"
          bootstrap="tests/php/unit/bootstrap.php"
-         displayDetailsOnIncompleteTests="true"
-         displayDetailsOnSkippedTests="true"
-         displayDetailsOnTestsThatTriggerDeprecations="true"
-         displayDetailsOnTestsThatTriggerErrors="true"
-         displayDetailsOnTestsThatTriggerNotices="true"
-         displayDetailsOnTestsThatTriggerWarnings="true"
-         displayDetailsOnPhpunitDeprecations="true"
-         cacheDirectory=".phpunit.cache"
 >
   <testsuites>
     <testsuite name="Unit tests">
@@ -20,9 +11,9 @@
     </testsuite>
   </testsuites>
 
-  <source>
+  <coverage>
     <include>
       <directory suffix=".php">src/</directory>
     </include>
-  </source>
+  </coverage>
 </phpunit>
