--- a/.distignore
+++ b/.distignore
@@ -3,12 +3,12 @@
 .gitignore
 .phpcs.cache
 .phpcs.xml.dist
-.phpunit.cache
 .phpunit.result.cache
 .wp-env.json
 /.git
 /.github
 /.idea
+/.phpunit.cache
 /.vscode
 /.wordpress-org
 /bin
@@ -20,9 +20,10 @@
 CODEOWNERS
 README.md
 composer.lock
+integration.xml.dist
 multisite-improvements.zip
 package-lock.json
 package.json
+patchwork.json
 phpstan.neon.dist
-phpunit-integration-tests.xml.dist
 phpunit.xml.dist
