--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,15 +1,12 @@
 <?xml version="1.0"?>
 <phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.6/phpunit.xsd"
+         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/11.5/phpunit.xsd"
          backupGlobals="true"
          colors="true"
-         testdox="false"
          bootstrap="tests/php/unit/bootstrap.php"
 >
   <php>
-    <ini name="error_reporting" value="32767" />
-    <ini name="display_errors" value="1" />
-    <ini name="display_startup_errors" value="1" />
+    <const name="WP_PLUGIN_DIR" value="/var/www/html/wp-content/plugins"/>
   </php>
 
   <testsuites>
