--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -4,9 +4,13 @@ jobs:
   unit-tests:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout project
-        uses: actions/checkout@v4
-      - name: Composer dependencies
-        run: composer install
-      - name: Run Testsuite
-        run: composer run-script tests:unit
+      - uses: actions/checkout@v4
+
+      - uses: php-actions/composer@v6
+
+      - name: PHPUnit Tests
+        uses: php-actions/phpunit@master
+        with:
+          version: 9.6
+          php_version: 7.4
+          configuration: phpunit.xml.dist
