--- a/composer.json
+++ b/composer.json
@@ -48,13 +48,8 @@
         "phpstan/phpstan-mockery": "^2.0"
     },
     "scripts": {
-        "tests:unit": "./vendor/bin/phpunit -c ./phpunit.xml.dist",
-        "tests:integration": "./vendor/bin/phpunit -c ./integration.xml.dist",
-        "tests": [
-            "@tests:unit",
-            "@tests:integration"
-        ],
-        "coverage": "XDEBUG_MODE=coverage ./vendor/bin/phpunit -c ./phpunit.xml.dist --coverage-html ./tests/coverage",
+        "tests": "./vendor/bin/phpunit -c ./phpunit.xml.dist",
+        "tests:coverage": "XDEBUG_MODE=coverage ./vendor/bin/phpunit -c ./phpunit.xml.dist --coverage-html ./tests/coverage",
         "cs": "./vendor/bin/phpcs .",
         "cs:fix": "./vendor/bin/phpcbf .",
         "phpstan": "./vendor/bin/phpstan analyse --memory-limit=1G",
