--- a/package.json
+++ b/package.json
@@ -1,13 +1,31 @@
 {
     "name": "multisyde",
+    "private": true,
     "description": "A WordPress plugin that explores potential improvements for WordPress Multisite.",
     "license": "GPL-2.0-or-later",
     "author": "Syde",
     "keywords": [
-        "multisite", "network admin", "enhancements", "usability", "admin tools"
+        "multisite",
+        "network admin",
+        "enhancements",
+        "usability",
+        "admin tools"
     ],
     "devDependencies": {
-        "@wordpress/env": "^10.29.0"
+        "@types/react": "^19.1.10",
+        "@types/react-dom": "^19.1.7",
+        "@wordpress/env": "^10.29.0",
+        "@wordpress/scripts": "^30.0.0",
+        "typescript": "^5.6.0"
+    },
+    "dependencies": {
+        "@wordpress/api-fetch": "^7.0.0",
+        "@wordpress/components": "^30.0.0",
+        "@wordpress/data": "^10.0.0",
+        "@wordpress/dataviews": "^7.0.0",
+        "@wordpress/element": "^6.0.0",
+        "@wordpress/i18n": "^6.0.0",
+        "@wordpress/url": "^4.0.0"
     },
     "engines": {
         "node": ">=20.19.1",
@@ -18,6 +36,7 @@
         "prewp-env": "npx check-node-version --package",
         "wp-env": "wp-env",
         "test-php-unit": "wp-env run tests-cli --env-cwd=wp-content/plugins/multisyde vendor/bin/phpunit -c phpunit.xml.dist",
-        "test-php-integration": "wp-env run tests-cli --env-cwd=wp-content/plugins/multisyde ./vendor/bin/phpunit -c ./integration.xml.dist"
+        "test-php-integration": "wp-env run tests-cli --env-cwd=wp-content/plugins/multisyde ./vendor/bin/phpunit -c ./integration.xml.dist",
+        "build:sites-dataviews": "wp-scripts build modules/SitesDataViews/assets/admin/sites-data-views/index.js --output-path=modules/SitesDataViews/build --output-filename=sites-data-views.js"
     }
 }
