--- a/.phpcs.xml.dist
+++ b/.phpcs.xml.dist
@@ -3,6 +3,7 @@
     <description>PHPCS example</description>
     <config name="testVersion" value="7.4-"/>
     <exclude-pattern>vendor/*</exclude-pattern>
+    <exclude-pattern>node_modules/*</exclude-pattern>
 
     <arg value="ps"/>
     <arg name="colors"/>
