--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -2,11 +2,21 @@ name: Unit Tests
 on: [push]
 jobs:
   unit-tests:
+    name: Unit Tests (PHP ${{ matrix.php-version }})
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        php-version: ['7.4', '8.3', '8.4']
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php-version }}
+          tools: composer
+          coverage: none
       - name: Composer dependencies
-        run: composer install
+        run: composer install --no-interaction --no-progress --prefer-dist
       - name: PHPUnit Tests
         run: vendor/bin/phpunit
